--- a/src/sass/page/_archive-coverage.scss
+++ b/src/sass/page/_archive-coverage.scss
@@ -5,7 +5,6 @@
         @extend %page-content;
         @extend %tac;
         padding: 9rem 2rem 4rem;
-        // margin: 0 auto;
         max-width: 1420px;
 
         .archive {
@@ -41,6 +40,15 @@
                     &.post-content {
                         flex: 1;
                         padding: 2rem 1rem;
+
+                        a.h4{
+                            @extend %pointer;
+                            transition: all ease .4s;
+
+                            &:hover{
+                                color: $c-primary-deep;
+                            }
+                        }
 
                         p {
                             &.date {
@@ -139,7 +147,7 @@
 
         @include mobile {
 
-            padding: 9rem 1.5rem 4rem;
+            padding: 4rem 1.5rem;
 
             .search-bar {
                 @include flex($w: wrap,$j-c:center);
@@ -164,6 +172,10 @@
     .ad-area-wrapper{
         background: $c-white;
         padding: 5rem 0;
+
+        @include pad{
+            padding: 4rem 0;
+        }
         
         .ad-area-container{
             @extend %page-content;
@@ -171,6 +183,7 @@
             gap: 30px;
             margin: 0 auto;
             max-width: 1420px;
+
             .block{
                 flex:1;
                 flex-basis: 100%;
@@ -180,10 +193,9 @@
                 }
             }
 
-            @include mobile{
+            @include pad{
                 flex-wrap: wrap;
             }
         }
-
     }
 }
