--- a/src/sass/page/_vote.scss
+++ b/src/sass/page/_vote.scss
@@ -286,6 +286,7 @@
                 &::after {
                     width: 34px;
                     height: 53px;
+                    font-size: unset !important;
                 }
 
             }
@@ -448,9 +449,7 @@
 
                         .front,.back{
                             @extend %bb;
-                            // @include absolute;
                             height: 100%;
-                            max-height: 560px;
                             transition: all ease .4s;
                         }
 
