調整首頁職缺欄位padding 品牌類別標題間隔

--- a/src/layout/category.html
+++ b/src/layout/category.html
@@ -2,8 +2,8 @@
 
 <div class="category-section">
     <div class="title">
-        <h2>品牌報名類別<br>二○二三</h2>
-        <p>在這裡，找尋你的感動。<br>一份工作，一個選擇。一種感動，幸福一生。</p>
+        <h2>二○二三<br>品牌報名類別</h2>
+        <p>一份工作，一個選擇。一種感動，幸福一生。<br>在這裡，找尋你的感動。</p>
     </div>
     <!-- <img src="assets/img/category-img.png" alt=""> -->
     <div class="category-content">
