--- a/pro/assets/css/main.css
+++ b/pro/assets/css/main.css
@@ -73,7 +73,7 @@ table {
   margin: auto;
 }
 
-.vote-wrapper .vote-container .brand-list .container, .vote-wrapper .vote-container .brand-vote-category .container, .vote-wrapper .vote-container .vote-list, .award-wrapper .award-container .brand-list .container, .award-wrapper .award-container .award-content, .award-wrapper .award-container .filter, .searchResult-wrapper .searchResult-issue, .searchResult-wrapper .searchResult-news, .searchResult-wrapper .searchResult-job, .searchResult-wrapper .searchResult-com, .lottery-wrapper .application-container .info .container, .lottery-wrapper .application-container .brand-category .section-lottery, .lottery-wrapper .application-container .brand-category .filter-lottery, .lottery-wrapper .application-container .brand-category .section-title, .company-wrapper .companyNews, .company-wrapper .companyJob, .company-wrapper .companyStory, .company-wrapper .tabWrapper, .talent-wrapper .talent-ad .ad-container, .talent-wrapper .talentSection, .happiness-wrapper .ad-area-wrapper .ad-area-container, .happiness-wrapper .happinessJob-wrapper .happinessJob, .application-wrapper .application-container .brand-list .container, .application-wrapper .application-container .info .container, .application-wrapper .application-container .happiness-goal .container, .archive-tem .ad-area-wrapper .ad-area-container, .archive-tem .archive-tem-c, .index-wrapper .category, .index-wrapper .article-wrapper .article, .index-wrapper .cardJob, .jobTag-section, .companyTag-section, .cardJob-section, nav {
+.vote-wrapper .vote-container .brand-list .container, .vote-wrapper .vote-container .brand-vote-category .container, .vote-wrapper .vote-container .vote-list, .award-wrapper .award-container .brand-list .container, .award-wrapper .award-container .award-content, .award-wrapper .award-container .filter, .searchResult-wrapper .searchResult-issue, .searchResult-wrapper .searchResult-news, .searchResult-wrapper .searchResult-job, .searchResult-wrapper .searchResult-com, .lottery-wrapper .application-container .info .container, .lottery-wrapper .application-container .brand-category .section-lottery, .lottery-wrapper .application-container .brand-category .filter-lottery, .lottery-wrapper .application-container .brand-category .section-title, .company-wrapper .companyNews, .company-wrapper .companyJob, .company-wrapper .companyStory, .company-wrapper .tabWrapper, .talent-wrapper .talent-ad .ad-container, .talent-wrapper .talentSection, .happiness-wrapper .ad-area-wrapper .ad-area-container, .happiness-wrapper .happinessJob-wrapper .happinessJob, .application-wrapper .application-container .brand-list .container, .application-wrapper .application-container .info .container, .application-wrapper .application-container .happiness-goal .container, .archive-tem .ad-area-wrapper .ad-area-container, .archive-tem .archive-tem-c, .index-wrapper .category, .index-wrapper .article-wrapper .article, .index-wrapper card-job, .index-wrapper .cardJob, .jobTag-section, .companyTag-section, .cardJob-section, nav {
   margin: auto;
   padding: 0 30px;
   max-width: 1920px;
@@ -921,20 +921,33 @@ nav .main-menu li:hover > ul {
 @media screen and (max-width: 768px) {
   .minipad-swiper {
     display: block;
-    max-width: 500px;
+    padding: 0px 40px;
+    width: 100%;
   }
 }
 @media screen and (max-width: 480px) {
   .minipad-swiper {
-    display: block;
-    width: auto;
-    max-width: 320px;
-    min-width: 300px;
+    padding: 0px 40px;
   }
+}
+.minipad-swiper .card-job {
+  width: 100%;
+  box-sizing: border-box;
+  flex: 1;
+  padding: 0px 40px;
+}
+.minipad-swiper .card-job img {
+  aspect-ratio: 16/9;
+}
+.minipad-swiper .job-content img {
+  aspect-ratio: unset;
 }
 .minipad-swiper .swiper {
   width: 100%;
   height: 100%;
+  max-height: unset !important;
+  min-height: unset !important;
+  margin-top: 20px !important;
 }
 .minipad-swiper .swiper-slide {
   text-align: center;
@@ -951,12 +964,6 @@ nav .main-menu li:hover > ul {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-}
-@media screen and (max-width: 480px) {
-  .minipad-swiper .card-job {
-    max-width: 240px;
-    width: 100%;
-  }
 }
 .minipad-swiper .swiper-button-next,
 .minipad-swiper .swiper-button-prev {
@@ -1005,12 +1012,6 @@ nav .main-menu li:hover > ul {
     left: 10px !important;
   }
 }
-.minipad-swiper .swiper-button-next:after, .minipad-swiper .swiper-rtl .swiper-button-prev:after, .minipad-swiper .swiper-button-prev:after, .minipad-swiper .swiper-rtl .swiper-button-next:after {
-  font-size: 27px;
-}
-.minipad-swiper .swiper-button-next, .minipad-swiper .swiper-button-prev {
-  width: auto;
-}
 
 .category-section {
   display: flex;
@@ -1043,6 +1044,8 @@ nav .main-menu li:hover > ul {
   text-align: left;
   border: unset;
   padding: 0px;
+  gap: 28px;
+  padding-top: 40px;
   -ms-writing-mode: tb-lr;
       writing-mode: vertical-lr;
 }
@@ -1054,6 +1057,8 @@ nav .main-menu li:hover > ul {
     justify-content: unset;
     align-content: unset;
     align-items: center;
+    padding-top: 0px;
+    gap: 0px;
     text-align: center;
     -ms-writing-mode: lr-tb;
         writing-mode: horizontal-tb;
@@ -1061,18 +1066,26 @@ nav .main-menu li:hover > ul {
 }
 .category-section > .title > h2 {
   letter-spacing: 0.5rem;
+  -ms-writing-mode: tb;
+      writing-mode: tb;
 }
 @media screen and (max-width: 1024px) {
   .category-section > .title > h2 {
+    -ms-writing-mode: lr-tb;
+        writing-mode: horizontal-tb;
     letter-spacing: 0.1rem;
   }
 }
 .category-section > .title > p {
+  -ms-writing-mode: tb;
+      writing-mode: tb;
   line-height: 150%;
   letter-spacing: 0.2rem;
 }
 @media screen and (max-width: 1024px) {
   .category-section > .title > p {
+    -ms-writing-mode: lr-tb;
+        writing-mode: horizontal-tb;
     letter-spacing: 0.1rem;
   }
 }
@@ -1090,6 +1103,14 @@ nav .main-menu li:hover > ul {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 80px;
+    grid-row-gap: 40px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .category-section .category-content > ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 20px;
     grid-row-gap: 40px;
   }
 }
@@ -1132,12 +1153,12 @@ nav .main-menu li:hover > ul {
   .swiper:not(.mySwiper-vote) {
     max-height: 1000px;
     min-height: 500px;
+    margin-top: 70px;
   }
 }
 @media screen and (max-width: 480px) {
   .swiper:not(.mySwiper-vote) {
     min-height: 500px;
-    margin-top: 70px;
   }
 }
 
@@ -1523,6 +1544,33 @@ nav .main-menu li:hover > ul {
     gap: 24px;
   }
 }
+.index-wrapper card-job {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: column;
+  justify-content: unset;
+  align-content: unset;
+  align-items: center;
+  width: 100%;
+  margin: auto;
+  gap: 48px;
+}
+@media screen and (max-width: 1024px) {
+  .index-wrapper card-job {
+    padding: 66px 0px;
+    gap: 32px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .index-wrapper card-job {
+    padding: 0px;
+    gap: 24px;
+  }
+}
+.index-wrapper card-job .card-job {
+  width: 100%;
+  box-sizing: border-box;
+}
 .index-wrapper .article-wrapper {
   background: #F7F1E7;
 }
@@ -1667,6 +1715,7 @@ nav .main-menu li:hover > ul {
 .index-wrapper .article-wrapper .article .article-swiper .swiper {
   width: 100%;
   height: 100%;
+  margin-top: 20px !important;
 }
 .index-wrapper .article-wrapper .article .article-swiper .swiper-slide {
   text-align: center;
@@ -3739,6 +3788,14 @@ nav .main-menu li:hover > ul {
   grid-column-gap: 0px;
   grid-row-gap: 8px;
   margin-bottom: 15px;
+}
+@media screen and (max-width: 768px) {
+  .company-wrapper .companyJob .archive .job-item .col.post-content .job-content {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 8px;
+  }
 }
 .company-wrapper .companyJob .archive .job-item .col.post-content p {
   margin: 0px;
