--- a/src/sass/page/_searchResult-news.scss
+++ b/src/sass/page/_searchResult-news.scss
@@ -15,7 +15,7 @@
             padding-top: 32px;
             white-space: nowrap;
             @include pad{
-                padding-top: 40px;
+                padding-top: 66px;
                 gap: 40px;
             }
             @include mobile{
@@ -56,6 +56,18 @@
                     &.post-content {
                         flex: 1;
                         padding: 2rem 1rem;
+
+                        a.h4{
+                            @extend %dib;
+                            @extend %pointer;
+                            transition: all ease .4s;
+                            color: $c-black;
+                            margin-bottom: 1rem;
+
+                            &:hover{
+                                color: $c-primary-deep;
+                            }
+                        }
 
                         p {
                             &.date {
