--- a/src/sass/page/_vote.scss
+++ b/src/sass/page/_vote.scss
@@ -219,7 +219,7 @@
 
                             background-image: url('../img/select-dropdown-icon.svg');
                             background-repeat: no-repeat;
-                            background-size: 58px 20px;
+                            background-size: 50px 15px;
                             background-position: calc(100% + 6px) calc(2em - 18px);
                         }
                         .search-submit-btn {
@@ -238,6 +238,7 @@
 
                     @include pad{
                         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+                        padding-top: 10px;
                     }
                     @include mobile {
                         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -343,6 +344,10 @@
                             .btn:hover{
                                 background: $c-white;
                                 color: $c-primary;
+                            }
+
+                            @include mobile{
+                                padding: 1.5rem !important;
                             }
                         }
 
