--- a/src/sass/page/_award-2021.scss
+++ b/src/sass/page/_award-2021.scss
@@ -13,7 +13,7 @@
                 gap: 30px;
 
                 li{
-                    padding: 1rem;
+                    padding: 0.5rem;
 
                     &.active{
                         border-bottom: 5px solid $c-primary;
@@ -225,7 +225,7 @@
         }
 
         @include pad{
-            .tab-control, .award-content{
+            .award-content{
                 padding: 2rem !important;
             }
 
