--- a/pro/assets/css/main.css
+++ b/pro/assets/css/main.css
@@ -88,7 +88,7 @@ table {
   display: inline-block;
 }
 
-.form ul li input[type=checkbox], .apply-dialog .container, .apply-dialog, .login-dialog .container, .login-dialog {
+.form ul li input[type=checkbox], .login-dialog .container, .login-dialog {
   display: none;
 }
 
@@ -7681,7 +7681,7 @@ button:focus {
 .form form {
   margin: 3rem auto;
 }
-.form > .row {
+.form .row {
   display: flex;
   flex-wrap: unset;
   flex-direction: unset;
@@ -7689,12 +7689,13 @@ button:focus {
   align-content: unset;
   align-items: unset;
   gap: 20px;
+  margin: 2rem 0;
 }
-.form > .row .cancel {
+.form .row .cancel {
   background: white;
   color: #EF6261;
 }
-.form > .row .cancel:hover {
+.form .row .cancel:hover {
   background: #EF6261;
   color: white;
 }
